--- a/Lab08/styles.css
+++ b/Lab08/styles.css
@@ -12,7 +12,7 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 0;/*Z index should be 1*/
+    z-index: 1;
 }
 nav>a{
     color: #e2512d;
@@ -72,7 +72,7 @@ section>h2{
 }
 article{
     display: none;
-    /*Add padding:1rem;*/
+    padding:1rem;
 }
 article.show{
     display: block;
